# astconfig

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/astconfig/: __init__.py  ast.py  core.py
tests/: test_astconfig.py
