[project]
name = "astconfig"
version = "0.1.0"
authors = [
    {name = "Gabriel Van Zandycke", email = "gabriel.vanzandycke@hotmail.com"},
]
description = "Python configuration leveraging python abstract-synctax-tree (AST) representation"
readme = "README.md"
license = "LGPL"
requires-python = ">=3.8"
dependencies = [
    "astunparse>=1.6.3",
]
urls.Homepage = "https://github.com/gabriel-vanzandycke/astconfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = ["pytest>=8.3"]
